# parciales

Parcial-final-corte2/: README.md
Parcial-final-corte2/Estudiante/: CMakeLists.txt
Parcial-final-corte2/Estudiante/include/: Estudiante.h
Parcial-final-corte2/Estudiante/src/: Estudiante.cpp  main.cpp
